Fixing alignment

--- a/styles/[projectId].module.scss
+++ b/styles/[projectId].module.scss
@@ -81,8 +81,6 @@
     justify-content: space-around;
     flex-direction: column;
 
-    padding-left: 65%;
-
     margin-top: 5em;
 
     a {
